--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@babel/core": "7.9.0",
     "@babel/preset-env": "7.9.0",
     "@babel/preset-react": "7.9.4",
-    "babel-loader": "8.1.0"
+    "babel-loader": "8.1.0",
+    "eslint": "6.8.0",
+    "eslint-config-htmlacademy": "0.5.2",
+    "eslint-plugin-react": "7.19.0"
   }
 }
