--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-react": "7.9.4",
     "babel-loader": "8.1.0",
     "eslint": "6.8.0",
+    "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.19.0",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
