added typescript into some modules

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This thing is an attempt to create a calculator with help of React for practising skills",
   "main": "index.js",
   "scripts": {
-    "eslint": "eslint --ext .jsx --ext .js src/",
+    "eslint": "npm run eslint.js && npm run eslint.ts",
+    "eslint.js": "eslint --ext .jsx --ext .js src/",
+    "eslint.ts": "eslint --config .eslintrc-ts.yml --ext .tsx src/",
     "build": "webpack --mode production",
     "start": "webpack-dev-server",
     "test": "npm run eslint"
@@ -24,7 +26,6 @@
   },
   "homepage": "https://github.com/Ecehuh67/Calculator#readme",
   "dependencies": {
-    "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
@@ -32,10 +33,17 @@
     "@babel/core": "7.9.0",
     "@babel/preset-env": "7.9.0",
     "@babel/preset-react": "7.9.4",
+    "@types/react": "16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@typescript-eslint/eslint-plugin": "2.29.0",
+    "@typescript-eslint/parser": "2.29.0",
     "babel-loader": "8.1.0",
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.19.0",
+    "ts-loader": "7.0.1",
+    "typescript": "3.8.3",
+    "utility-types": "3.10.0",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3"
