--- a/package.json
+++ b/package.json
@@ -33,14 +33,19 @@
     "@babel/core": "7.9.0",
     "@babel/preset-env": "7.9.0",
     "@babel/preset-react": "7.9.4",
+    "@types/jest": "25.2.1",
     "@types/react": "16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-test-renderer": "16.9.2",
     "@typescript-eslint/eslint-plugin": "2.29.0",
     "@typescript-eslint/parser": "2.29.0",
     "babel-loader": "8.1.0",
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.19.0",
+    "jest": "25.4.0",
+    "react-test-renderer": "16.13.1",
+    "ts-jest": "25.4.0",
     "ts-loader": "7.0.1",
     "typescript": "3.8.3",
     "utility-types": "3.10.0",
