--- a/.eslintrc-ts.yml
+++ b/.eslintrc-ts.yml
@@ -5,3 +5,5 @@ parser: '@typescript-eslint/parser'
 rules:
   '@typescript-eslint/explicit-function-return-type': 'off'
   '@typescript-eslint/no-use-before-define': 'off'
+  '@typescript-eslint/no-explicit-any': 'error'
+
