--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "This thing is an attempt to create a calculator with help of React for practising skills",
   "main": "index.js",
   "scripts": {
-    "eslint": "npm run eslint.js && npm run eslint.ts",
+    "eslint": "npm run eslint.ts && npm run eslint.js",
     "eslint.js": "eslint --ext .jsx --ext .js src/",
     "eslint.ts": "eslint --config .eslintrc-ts.yml --ext .tsx src/",
     "build": "webpack --mode production",
     "start": "webpack-dev-server",
-    "test": "npm run eslint"
+    "test": "npm run eslint",
+    "test.jest": "jest"
   },
   "repository": {
     "type": "git",
