--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "eslint.ts": "eslint --config .eslintrc-ts.yml --ext .tsx src/",
     "build": "webpack --mode production",
     "start": "webpack-dev-server",
-    "test": "npm run eslint",
+    "test": "npm run eslint && npm run test.jest",
     "test.jest": "jest"
   },
   "repository": {
@@ -40,6 +40,7 @@
     "@types/react-test-renderer": "16.9.2",
     "@typescript-eslint/eslint-plugin": "2.29.0",
     "@typescript-eslint/parser": "2.29.0",
+    "babel-jest": "25.4.0",
     "babel-loader": "8.1.0",
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
