--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.19.0",
     "jest": "25.4.0",
+    "prettier": "2.0.5",
     "react-test-renderer": "16.13.1",
     "ts-jest": "25.4.0",
     "ts-loader": "7.0.1",
